[package]
name = "gun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.3.1"
scraper = "0.16.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5"

